src/app/snapshots/jiq__app__render__snapshot_tests__snapshot_autocomplete_popup_selected_item_with_signature.snap
---
source: src/app/render.rs
expression: output
---
"┌ Results ─────────────────────────────────────────────────────────────────────┐"
"│{                                                                             │"
"│  "name": "Alice",                                                            │"
"│  "age": 30                                                                   │"
"│}                                                                             │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│ ┌ Suggestions ──────────────┐                                                │"
"│ │  map(expr)     [function] │                                                │"
"│ │► max           [function] │                                                │"
"│ │  max_by(expr)  [function] │                                                │"
"└─└───────────────────────────┘────────────────────────────────────────────────┘"
"┌ Query [INSERT] ──────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" F1: Help | Shift+Tab: Switch Pane | Ctrl+P/N: Cycle History | ↑/Ctrl+R: History"
