src/app/snapshots/jiq__app__render__snapshot_tests__snapshot_autocomplete_popup_with_function_signatures.snap
---
source: src/app/render.rs
expression: output
---
"┌ Object ──────────────────────────────────────────────────────────────────────┐"
"│{                                                                             │"
"│  "name": "Alice",                                                            │"
"│  "age": 30                                                                   │"
"│}                                                                             │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│ ┌ Suggestions ───────────────┐                                               │"
"│ │► select(expr)   [function] │                                               │"
"│ │  sort           [function] │                                               │"
"│ │  sort_by(expr)  [function] │                                               │"
"└─└────────────────────────────┘───────────────────────────────────────────────┘"
"┌ Query [INSERT] ──────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" F1: Help | Shift+Tab: Switch Pane | Ctrl+P/N: Cycle History | ↑/Ctrl+R: History"
