src/app/snapshots/jiq__app__render__snapshot_tests__snapshot_history_popup_no_matches.snap
---
source: src/app/render.rs
expression: output
---
"┌ Results ─────────────────────────────────────────────────────────────────────┐"
"│{                                                                             │"
"│  "test": true                                                                │"
"│}                                                                             │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"┌ History (0/1) ───────────────────────────────────────────────────────────────┐"
"│   No matches                                                                 │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Search ──────────────────────────────────────────────────────────────────────┐"
"│xyz                                                                           │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Query [INSERT] ──────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" F1: Help | Shift+Tab: Switch Focus | Enter: Exit with Results | Ctrl+Q: Exit wi"
