src/app/snapshots/jiq__app__render__snapshot_tests__snapshot_history_popup_with_search.snap
---
source: src/app/render.rs
expression: output
---
"┌ Results ─────────────────────────────────────────────────────────────────────┐"
"│{                                                                             │"
"│  "test": true                                                                │"
"│}                                                                             │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"┌ History (1/3) ───────────────────────────────────────────────────────────────┐"
"│ ► .name                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Search ──────────────────────────────────────────────────────────────────────┐"
"│na                                                                            │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Query [INSERT] ──────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" F1: Help | Shift+Tab: Switch Focus | Enter: Exit with Results | Ctrl+Q: Exit wi"
