src/app/snapshots/jiq__app__render__snapshot_tests__snapshot_input_border_no_hint_enabled.snap
---
source: src/app/render.rs
expression: output
---
"┌ Results ─────────────────────────────────────────────────────────────────────┐"
"│{                                                                             │"
"│  "name": "Alice",                                                            │"
"│  "age": 30                                                                   │"
"│}                                                                             │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                 ┌ select ─────────────────────────────── Ctrl+T to dismiss ┐ │"
"│                 │Filter elements that match a condition                    │ │"
"│                 │                                                          │ │"
"│                 │  select(.age > 18)                       │ numeric filter│ │"
"│                 │  select(.status == "active")             │ exact match   │ │"
"│                 │  select(.tags | contains(["important"])) │ array check   │ │"
"│                 │  select(.name | test("^test"; "i"))      │ regex match   │ │"
"│                 │                                                          │ │"
"│                 │💡 For null-safe checks, use select(.field? // false)     │ │" Hidden by multi-width symbols: [(20, " ")]
"└─────────────────└──────────────────────────────────────────────────────────┘─┘"
"┌ Query [INSERT] ──────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" F1: Help | Shift+Tab: Switch Pane | Ctrl+P/N: Cycle History | ↑/Ctrl+R: History"
